--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neon Digital Agency | Пресскот, Arizona RP</title>
+    <title>Neon Digital Agency | Пресскот </title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;1,400&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -117,7 +117,7 @@
     <header class="hero-gradient text-white py-20 px-8">
         <div class="max-w-6xl mx-auto">
             <h1 class="text-5xl lg:text-7xl font-serif font-bold leading-tight">Neon Digital Agency</h1>
-            <p class="text-xl lg:text-2xl opacity-90 mt-4">Официальный веб-портал | Пресскот, Arizona RP</p>
+            <p class="text-xl lg:text-2xl opacity-90 mt-4">Официальный веб-портал | Пресскот</p>
             <p class="mt-2 opacity-75">Основано: 2025 год | Владелец: Matias Bazan</p>
         </div>
     </header>
@@ -134,8 +134,7 @@
                     Основана в 2025 году <strong>Matias Bazan</strong>, специалистом в области цифровой интеграции.
                 </p>
                 <p class="text-gray-700 mt-4">
-                    Мы разрабатываем цифровые решения для гос. структур, криминальных организаций и частных лиц, 
-                    обеспечивая полную интеграцию с реальностью Arizona RP.
+                    Мы разрабатываем цифровые решения для гос. структур, криминальных организаций и частных лиц.
                 </p>
             </div>
 
@@ -156,18 +155,18 @@
         <!-- Услуги -->
         <section id="services" class="mb-16">
             <h2 class="text-4xl font-serif font-bold text-gray-800 mb-8">💼 Услуги</h2>
-            <p class="text-gray-700 mb-6">Все сайты создаются с учётом RP-реалий и могут использоваться в сюжетах.</p>
+            <p class="text-gray-700 mb-6">Все сайты создаются с учетом всех просьб клиентов.</p>
 
             <div class="grid lg:grid-cols-2 gap-6">
                 <div class="role-card">
                     <h4 class="font-semibold text-gray-800 mb-3">🌐 Сайт персонажа</h4>
                     <p class="text-sm text-gray-600">VIP-профиль: история, звания, достижения.</p>
-                    <div class="mt-2 text-orange-600 font-semibold">5 000 000 AZ$</div>
+                    <div class="mt-2 text-orange-600 font-semibold">5 000 000 $</div>
                 </div>
                 <div class="role-card">
-                    <h4 class="font-semibold text-gray-800 mb-3">🏛️ Сайт банды / клана</h4>
+                    <h4 class="font-semibold text-gray-800 mb-3">🏛️ Сайт частной организации</h4>
                     <p class="text-sm text-gray-600">Официальный портал: состав, устав, база операций.</p>
-                    <div class="mt-2 text-orange-600 font-semibold">20 000 000 AZ$</div>
+                    <div class="mt-2 text-orange-600 font-semibold">20 000 000 $</div>
                 </div>
                 <div class="role-card">
                     <h4 class="font-semibold text-gray-800 mb-3">🛡️ Сайт гос. структуры</h4>
@@ -177,7 +176,7 @@
                 <div class="role-card">
                     <h4 class="font-semibold text-gray-800 mb-3">📄 Генератор документов</h4>
                     <p class="text-sm text-gray-600">Удостоверения, ордера, водительские права.</p>
-                    <div class="mt-2 text-orange-600 font-semibold">12 000 000 AZ$</div>
+                    <div class="mt-2 text-orange-600 font-semibold">12 000 000 $</div>
                 </div>
             </div>
         </section>
@@ -191,16 +190,16 @@
 
             <div class="grid md:grid-cols-2 gap-6">
                 <div class="role-card">
-                    <h4 class="font-semibold text-gray-800 mb-3">Сайт LSPD Пресскота</h4>
-                    <p class="text-sm text-gray-600">Портал с розыском, формами и системой оповещений.</p>
+                    <h4 class="font-semibold text-gray-800 mb-3">-</h4>
+                    <p class="text-sm text-gray-600">Тут скоро что-то будет</p>
                 </div>
                 <div class="role-card">
-                    <h4 class="font-semibold text-gray-800 mb-3">Портал "Los Diablos"</h4>
-                    <p class="text-sm text-gray-600">Закрытый сайт банды с доступом по паролю.</p>
+                    <h4 class="font-semibold text-gray-800 mb-3">-"</h4>
+                    <p class="text-sm text-gray-600">Тут может появится ваш сайт</p>
                 </div>
                 <div class="role-card">
-                    <h4 class="font-semibold text-gray-800 mb-3">DMV Arizona</h4>
-                    <p class="text-sm text-gray-600">Фейковый сайт для оформления документов.</p>
+                    <h4 class="font-semibold text-gray-800 mb-3Arizo</h4>
+                    <p class="text-sm text-gray</p
                 </div>
                 <div class="role-card">
                     <h4 class="font-semibold text-gray-800 mb-3">Бизнес: Vinewood Auto</h4>
