--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neon Digital Agency | Пресскот </title>
+    <title>Neon Digital Agency | Пресскот</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;1,400&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -106,7 +106,6 @@
         <h3 class="font-serif text-xl text-gray-800 mb-6">Меню</h3>
         <a href="#about" class="toc-link block py-2 px-4 rounded hover:bg-orange-50 text-gray-700">О компании</a>
         <a href="#services" class="toc-link block py-2 px-4 rounded hover:bg-orange-50 text-gray-700">Услуги</a>
-        <a href="#portfolio" class="toc-link block py-2 px-4 rounded hover:bg-orange-50 text-gray-700">Портфолио</a>
         <a href="#contacts" class="toc-link block py-2 px-4 rounded hover:bg-orange-50 text-gray-700">Контакты</a>
     </div>
 
@@ -134,7 +133,8 @@
                     Основана в 2025 году <strong>Matias Bazan</strong>, специалистом в области цифровой интеграции.
                 </p>
                 <p class="text-gray-700 mt-4">
-                    Мы разрабатываем цифровые решения для гос. структур, криминальных организаций и частных лиц.
+                    Мы разрабатываем цифровые решения для государственных структур, криминальных организаций и частных лиц, 
+                    обеспечивая полную интеграцию с реальностью.
                 </p>
             </div>
 
@@ -155,7 +155,7 @@
         <!-- Услуги -->
         <section id="services" class="mb-16">
             <h2 class="text-4xl font-serif font-bold text-gray-800 mb-8">💼 Услуги</h2>
-            <p class="text-gray-700 mb-6">Все сайты создаются с учетом всех просьб клиентов.</p>
+            <p class="text-gray-700 mb-6">Все сайты создаются с учётом пожеланий клиентов.</p>
 
             <div class="grid lg:grid-cols-2 gap-6">
                 <div class="role-card">
@@ -171,39 +171,12 @@
                 <div class="role-card">
                     <h4 class="font-semibold text-gray-800 mb-3">🛡️ Сайт гос. структуры</h4>
                     <p class="text-sm text-gray-600">LSPD, SASP, FIB — с розыском, формами, чатами.</p>
-                    <div class="mt-2 text-orange-600 font-semibold">50 000 000 AZ$</div>
+                    <div class="mt-2 text-orange-600 font-semibold">50 000 000 $</div>
                 </div>
                 <div class="role-card">
                     <h4 class="font-semibold text-gray-800 mb-3">📄 Генератор документов</h4>
                     <p class="text-sm text-gray-600">Удостоверения, ордера, водительские права.</p>
                     <div class="mt-2 text-orange-600 font-semibold">12 000 000 $</div>
-                </div>
-            </div>
-        </section>
-
-        <div class="section-divider"></div>
-
-        <!-- Портфолио -->
-        <section id="portfolio" class="mb-16">
-            <h2 class="text-4xl font-serif font-bold text-gray-800 mb-8">🖼️ Портфолио</h2>
-            <p class="text-gray-700 mb-6">Примеры наших работ в мире San Andreas.</p>
-
-            <div class="grid md:grid-cols-2 gap-6">
-                <div class="role-card">
-                    <h4 class="font-semibold text-gray-800 mb-3">-</h4>
-                    <p class="text-sm text-gray-600">Тут скоро что-то будет</p>
-                </div>
-                <div class="role-card">
-                    <h4 class="font-semibold text-gray-800 mb-3">-"</h4>
-                    <p class="text-sm text-gray-600">Тут может появится ваш сайт</p>
-                </div>
-                <div class="role-card">
-                    <h4 class="font-semibold text-gray-800 mb-3Arizo</h4>
-                    <p class="text-sm text-gray</p
-                </div>
-                <div class="role-card">
-                    <h4 class="font-semibold text-gray-800 mb-3">Бизнес: Vinewood Auto</h4>
-                    <p class="text-sm text-gray-600">Онлайн-витрина с каталогом автомобилей.</p>
                 </div>
             </div>
         </section>
@@ -232,10 +205,10 @@
     <footer class="bg-gray-800 text-white py-8 px-8">
         <div class="max-w-6xl mx-auto text-center">
             <p class="text-sm opacity-75">
-                © 2025 Neon Digital Agency | Официальная веб-студия штата Пресскот | Arizona RP
+                © 2025 Neon Digital Agency | Официальная веб-студия штата Пресскот
             </p>
             <p class="text-xs opacity-50 mt-1">
-                Все права защищены. Материалы предназначены для внутреннего использования в рамках ролевой игры.
+                Все права защищены. Материалы предназначены для внутреннего использования.
             </p>
         </div>
     </footer>
